--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Embedded tomcat server port
 server.port=9002
 
-client.id=
-client.secret=
+client.id=5db98cdc682940ad9739d2d212c54a40
+client.secret=fe62ac9cfeaf4ddf9bb118ff33d32dd2
 auth.scope=all_info
 accessTokenUri=https://account.lab.fiware.org/oauth2/token
 userAuthorizationUri=https://account.lab.fiware.org/oauth2/authorize
 checkTokenEndpointUrl=https://account.lab.fiware.org/user
 authorization.code=authorization_code
-preestablished.redirect.url=http://heart.sparkworks.net/fiwareLogin
+preestablished.redirect.url=http://localhost:9002/complete/fiware
