--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ accessTokenUri=https://account.lab.fiware.org/oauth2/token
 userAuthorizationUri=https://account.lab.fiware.org/oauth2/authorize
 checkTokenEndpointUrl=https://account.lab.fiware.org/user
 authorization.code=authorization_code
-preestablished.redirect.url=http://localhost:9002/fiwareLoginπαι
+preestablished.redirect.url=http://localhost:9002/fiwareLogin
